--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             </ul>
           </div>
         </section>
-        <div class="footer__copyright">©2024 Sheyla Dias Coimbra</div>
+        <div class="footer__copyright">©2024 Sheyla Dias Coimbra da Cunha</div>
       </footer>
     </div>
   </body>
