Atualiza o README com informações do projeto

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
 
         <h1 class="header__title">
-          <span class="header__span-accent">Café especial</span>
+          <span class="header__span-accent">Cafeína Criativa</span>
           na biblioteca Triple Peaks
         </h1>
         <p class="header__description">
