--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Biblioteca Triple Peaks</title>
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -136,7 +135,7 @@
                 />
               </label>
               <label for="reservation-date" class="reservation__form-label">
-                Data & hora *
+                Data e hora *
                 <input
                   type="datetime-local"
                   class="reservation__form-input"
@@ -152,23 +151,23 @@
                   placeholder="email@email.com"
                 />
               </label>
+
+              <button class="reservation__button" type="submit">
+                Reservar uma mesa
+              </button>
+              <div>
+                <label
+                  for="reservation-table"
+                  class="reservation__form-label reservation__option"
+                  ><input
+                    type="checkbox"
+                    class="reservation__form-input"
+                    id="reservation-table"
+                  />
+                  Eu Concordo com os termos de uso
+                </label>
+              </div>
             </fieldset>
-            <button class="reservation__button" type="submit">
-              Reservar uma mesa
-            </button>
-            <div>
-              <label
-                for="reservation-table"
-                class="reservation__form-label reservation__option"
-              >
-                <input
-                  type="checkbox"
-                  class="reservation__form-input"
-                  id="reservation-table"
-                />
-                Concordo com os termos de uso
-              </label>
-            </div>
           </form>
         </section>
       </main>
@@ -206,7 +205,7 @@
             </ul>
           </div>
         </section>
-        <div class="footer__copyright">©2024 Sheyla Dias Coimbra da Cunha</div>
+        <div class="footer__copyright">©2024 Sheyla Dias C.da Cunha</div>
       </footer>
     </div>
   </body>
